--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,11 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+
     <!-- Favicon head tag -->
     <link rel="icon" href="https://pbs.twimg.com/profile_images/1112635060480442368/Ou7bjYFs_400x400.png" type="image/x-icon">
+
+    {% seo %}
   </head>
 
   <body>
