Modified style files & read me

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,3 @@
-
 //
 // VARIABLES
 //
@@ -18,6 +17,7 @@ $white: #fff;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$yugothic: "游ゴシック", "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ ゴシック", sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
