--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
+  background: $white;
+  font: 17px/1.4 $yugothic;
   color: $darkGray;
 }
 
@@ -45,14 +45,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 26px;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 22px;
 }
 
 h3 {
@@ -196,13 +196,14 @@ img {
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
-  font-size: 28px;
+  font-size: 26px;
   letter-spacing: 1px;
 }
 
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
+  font-family: $helvetica;
   font-size: 16px;
 
   @include mobile {
@@ -267,8 +268,13 @@ nav {
 
   .read-more {
     text-transform: uppercase;
+    font-family: $helvetica;
     font-size: 15px;
   }
+}
+
+.page_en {
+  font-family: $helvetica;
 }
 
 .wrapper-footer {
@@ -281,6 +287,7 @@ nav {
 footer {
   padding: 20px 0;
   text-align: center;
+  font-family: $helvetica;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
