Some adjustments for the site layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 
     {% seo %}
     <!-- Google Adsense-->
+    <!--
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
@@ -26,6 +27,7 @@
         enable_page_level_ads: true
       });
     </script>
+    -->
   </head>
 
   <body>
@@ -55,7 +57,8 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}<br />
-          <a href="{{ site.baseurl }}/privacy">Privacy Policy</a>
+          <a href="{{ site.baseurl }}/">Home</a> | <a href="{{ site.baseurl }}/privacy">Privacy Policy</a><br />
+          <div style="font-size: 8pt">© 2019 Atsuki Yamaguchi.</div>
         </footer>
       </div>
     </div>
