--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,10 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  <div class="post-tag">
+    {% include post_meta.html %}
+  </div>
+
   <div class="toc">
     <input type="checkbox" id="toc_lb" class="on-off" />
     <label for="toc_lb">目次</label>
