Add a new post & modify a contact form

--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ table tr{
 table th,table td{
   text-align: center;
   width: auto;
-  padding: 5px 0;
+  padding: 5px 5px;
   border: 1px $darkerGray solid;
 }
 
