--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+
   <div class="post-tag">
     {% include post_meta.html %}
   </div>
@@ -12,7 +13,8 @@ layout: default
     <input type="checkbox" id="toc_lb" class="on-off" />
     <label for="toc_lb">目次</label>
     {% include toc.html html=content sanitize=true %}
-  </div> 
+  </div>
+
   <div class="entry">
     {{ content }}
   </div>
@@ -20,6 +22,8 @@ layout: default
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
+
+  {% include share_button.html %}
   <br />
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
