--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,21 @@
     url('/resources/fonts/Noto-Sans/NotoSansCJKjp-DemiLight.woff') format('woff'),
     url('/resources/fonts/Noto-Sans/NotoSansCJKjp-DemiLight.ttf')  format('truetype'),
     url('/resources/fonts/Noto-Sans/NotoSansCJKjp-DemiLight.eot') format('embedded-opentype');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: bold;
+  src: local('Noto Sans CJK JP Bold'),
+       local('NotoSansCJKjp-Bold'),
+       local('NotoSansJP-Bold'),
+    url('/resources/fonts/Noto-Sans/NotoSansCJKjp-Bold.woff2') format('woff2'),
+    url('/resources/fonts/Noto-Sans/NotoSansCJKjp-Bold.woff') format('woff'),
+    url('/resources/fonts/Noto-Sans/NotoSansCJKjp-Bold.ttf')  format('truetype'),
+    url('/resources/fonts/Noto-Sans/NotoSansCJKjp-Bold.eot') format('embedded-opentype');
+    font-display: swap;
 }
 
 /**************/
@@ -31,7 +46,7 @@ html {
 }
 
 body {
-  font: 17px/1.4 $yugothic;
+  font: 17px $yugothic;
   background: $white;
   font-weight: 300;
   color: $darkGray;
@@ -39,6 +54,10 @@ body {
   letter-spacing: .5px;
   // 行間の設定
   line-height: 1.5;
+
+  @include mobile {
+    font-size: 16px;
+  }
 }
 
 .container {
@@ -65,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 
   @include mobile {
-    line-height: 1.4;
+    line-height: 1.5;
   }
 }
 
@@ -74,29 +93,54 @@ h1 {
   a {
     color: inherit;
   }
+
+  @include mobile {
+    font-size: 22px;
+  }
 }
 
 h2 {
   font-size: 22px;
+
+  @include mobile {
+    font-size: 20px;
+  }
 }
 
 .post h2 {
   border-left: 6px solid $darkerGray;
   border-bottom: 1px solid $darkerGray;
   padding: 4px 16px;
+
+  @include mobile {
+    border-left: 4px solid $darkerGray;
+    padding: 4px 14px;
+  }
 }
 
 h3 {
   font-size: 20px;
+
+  @include mobile {
+    font-size: 18px;
+  }
 }
 
 .post h3 {
   border-bottom: 1px solid $darkerGray;
   padding: 4px 10px;
+
+  @include mobile {
+    padding: 2px 8px;
+  }
 }
 
 h4 {
   font-size: 18px;
+
+  @include mobile {
+    font-size: 16px;
+  }
 }
 
 p {
@@ -472,6 +516,10 @@ nav {
     color: $gray;
     font-size: 15px;
     font-style: italic;
+
+    @include mobile {
+      font-size: 13px;
+    }
   }
 
   .comments {
