--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,17 +1,22 @@
-
-.highlight {
-  background-color: #efefef;
-  padding: 7px 7px 7px 10px;
+pre.highlight {
+  padding: 1em;
+  color: $darkGray;
+  background-color: rgb(240, 240, 240);
   border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
+  border-radius: 3px;
+  overflow-x: auto;
   margin: 10px 0 10px 0;
-  overflow: scroll;
+}
+ 
+code {
+  font-family: 'Bitstream Vera Sans Mono','Courier', monospace;
 }
 
-code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+.highlight code {
+  font-size: 14px;
+  border: 0;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
