--- a/style.scss
+++ b/style.scss
@@ -229,6 +229,16 @@ code.highlighter-rouge{
   color: $gray;
 }
 
+.date_front {
+  color: $gray;
+  font-size: 14px;
+  font-weight: bold;
+
+  @include mobile {
+    font-size: 12px;
+  }
+}
+
 // Specify the color of the selection
 ::-moz-selection {
   color: $black;
@@ -502,6 +512,10 @@ nav {
 }
 
 .post {
+  h1 {
+    margin-top: 3px;
+  }
+
   blockquote {
     //margin: 1.8em .8em;
     border-left: 2px solid $gray;
