Modify style sheets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,10 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}<br />
-          <a href="{{ site.baseurl }}/">Home</a> 
-          | <a href="{{ site.baseurl }}/sitemap">Sitemap</a> 
-          | <a href="{{ site.baseurl }}/privacy">Privacy Policy</a><br />
+          <a href="{{ site.baseurl }}/">Home</a>
+          | <a href="{{ site.baseurl }}/Introduction/">About This Blog</a>  
+          | <a href="{{ site.baseurl }}/sitemap/">Sitemap</a> 
+          | <a href="{{ site.baseurl }}/privacy/">Privacy</a><br />
           <div style="font-size: 8pt">© 2019 Atsuki Yamaguchi.</div>
         </footer>
       </div>
