--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -14,6 +14,8 @@ code {
 
 .highlight code {
   font-size: 15px;
+  letter-spacing: 0;
+  line-height: 1;
   border: 0;
   padding-right: 0;
   padding-left: 0;
