Create a sidebar prototype

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,6 +12,8 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+$background: #e0efff;
+//$background: #eceef1;
 
 // Font stacks
 $helvetica: Helvetica, Arial, 'Noto Sans Japanese', "游ゴシック", "Yu Gothic", YuGothic, sans-serif;
