--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,19 +50,25 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
-      {{ content }}
+    <div class="container">
+      <main class="main_contents" role="main">
+        {{ content }}
+      </main>
+
+      <aside class="sidebar" role="complementary">
+        {% include sidebar.html %}
+      </aside>
     </div>
 
     <div class="wrapper-footer">
-      <div class="container">
+      <div class="footer_container">
         <footer class="footer">
           {% include svg-icons.html %}<br />
           <a href="{{ site.baseurl }}/">Home</a>
           | <a href="{{ site.baseurl }}/Introduction/">About This Blog</a>  
           | <a href="{{ site.baseurl }}/sitemap/">Sitemap</a> 
           | <a href="{{ site.baseurl }}/privacy/">Privacy</a><br />
-          <div style="font-size: 8pt">© 2019 Atsuki Yamaguchi.</div>
+          <div style="font-size: 8pt;">© 2019 Atsuki Yamaguchi.</div>
         </footer>
       </div>
     </div>
