Finishing sidebar feature

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
 
     <!-- Favicon head tag -->
-    <link rel="icon" href="{{ site.baseurl }}/resources/logo/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="{{ site.baseurl }}/resources/logo/kimamani_simple.png" type="image/x-icon">
 
     {% seo %}
     <!-- Google Adsense-->
@@ -38,8 +38,7 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
+            <h1 class="site-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/resources/logo/kimamani_moji.png" /></a></h1>
           </div>
 
           <nav>
