--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,11 @@ body {
   max-width: 1100px;
   margin: auto;
 
+  @include tablet {
+    flex-direction: column;
+    align-items: center;
+  }
+
   @include mobile {
     flex-direction: column;
     margin: 0 auto;
@@ -76,6 +81,10 @@ body {
     padding: 35px;
     background: $white;
     border-radius: 30px;
+
+    @include tablet {
+      width: 95%;
+    }
 
     @include mobile {
       width: 100%;
@@ -96,6 +105,9 @@ body {
 }
 
 .side-ad {
+  @include tablet {
+    margin-top: 0.5em;
+  }
   @include mobile {
     margin-top: 0.5em;
   }
@@ -112,7 +124,8 @@ body {
   }
 
   hr {
-    border-top: 2px dashed $background;
+    border: none;
+    border-top: 3px dashed $background;
   }
 
   .profile_icon {
@@ -129,6 +142,15 @@ body {
   @include mobile {
     border-radius: 0;
   }
+  
+  table tr{
+    border-bottom: none;
+  }
+  
+  table th,table td{
+    border: none;
+    margin: 0;
+  }
 }
 
 .side-category {
@@ -136,7 +158,7 @@ body {
   padding: 0.05em 0;
   border-radius: 10px;
   margin-top: 0.5em;
-  font-size: 0.8em;
+  font-size: 0.9em;
 
   @include mobile {
     border-radius: 0;
@@ -165,7 +187,7 @@ body {
 
 .head_container {
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 1100px;
   padding: 0 10px;
   width: 100%;
 }
@@ -501,12 +523,13 @@ code.highlighter-rouge{
 
 .wrapper-masthead {
   margin-bottom: 50px;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 0 10px gray;
   background-color: $white;
 }
 
 .masthead {
-  padding: 20px 0;
+  padding: 10px 0;
 
   @include mobile {
     text-align: center;
@@ -514,6 +537,7 @@ code.highlighter-rouge{
 }
 
 .site-avatar {
+  margin-left: 0.25em;
   float: left;
   width: 70px;
   height: 70px;
@@ -521,10 +545,6 @@ code.highlighter-rouge{
 
   @include mobile {
     display: none;
-  }
-
-  img {
-    border-radius: 35px;
   }
 }
 
@@ -539,13 +559,12 @@ code.highlighter-rouge{
 }
 
 .site-name {
-  margin: 0;
-  color: $darkGray;
+  margin: 15px 0 0 0;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 400;
-  font-size: 26px;
-  letter-spacing: 1px;
+  
+  img {
+    height: 40px;
+  }
 }
 
 .site-description {
@@ -562,6 +581,7 @@ code.highlighter-rouge{
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
+  margin-right: 0.25em;
   font-family: $helveticaNeue;
   font-size: 18px;
 
@@ -740,6 +760,10 @@ footer {
   padding: 20px 0;
   text-align: center;
   font-family: $helvetica;
+}
+
+.mathjax-scroll {
+  overflow-x: auto;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
