--- a/style.scss
+++ b/style.scss
@@ -137,6 +137,17 @@ body {
   }
 }
 
+.amazon-button {
+  background: $white;
+  border-radius: 10px;
+  padding: 10px 0;
+  margin-top: 0.5em;
+
+  @include mobile {
+    border-radius: 0;
+  }
+}
+
 .search {
   background: $white;
   padding: 10px;
