--- a/_layouts/page_en.html
+++ b/_layouts/page_en.html
@@ -9,4 +9,8 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+
+  <div class="date">
+    Updated on {{ page.last_modified_at | date: "%B %e, %Y" }}
+  </div>
 </article>
