--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,12 +29,6 @@ layout: default
     {{ content }}
   </div>
 
-  <!--
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-  -->
-
   {% include share_button.html %}
   <br />
 
@@ -71,20 +65,20 @@ layout: default
 
   <!-- 前後のページへのリンク-->
   <div class="pager">
-    {% if page.next %}
-      <div class="next">
-        <p><i class="fas fa-arrow-circle-left" style="margin: 0 0.5em 0 0;"></i>次の記事</p>
+    {% if page.previous %}
+      <div class="prev">
+        <p><i class="fas fa-arrow-circle-left" style="margin: 0 0.5em 0 0;"></i>前の記事</p>
         <p>
-          <a href="{{ page.next.url | relative_url }}">{{ page.next.title }}</a>
+            <a href="{{ page.previous.url | relative_url }}">{{ page.previous.title }}</a>
         </p>
       </div>
     {% endif %}
 
-    {% if page.previous %}
-      <div class="prev">
-        <p>前の記事<i class="fas fa-arrow-circle-right" style="margin: 0 0 0 0.5em;"></i></p>
+    {% if page.next %}
+      <div class="next">
+        <p>次の記事<i class="fas fa-arrow-circle-right" style="margin: 0 0 0 0.5em;"></i></p>
         <p>
-            <a href="{{ page.previous.url | relative_url }}">{{ page.previous.title }}</a>
+          <a href="{{ page.next.url | relative_url }}">{{ page.next.title }}</a>
         </p>
       </div>
     {% endif %}
