--- a/css/post.scss
+++ b/css/post.scss
@@ -45,6 +45,10 @@
     border: 1px $darkerGray solid;
   }
 
+  table td {
+    overflow-wrap : break-word;
+  }
+
   table tr:nth-child(even){
     background-color: rgb(248, 248, 248)
   }
