Modify style sheets

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,11 +1,11 @@
 pre.highlight {
-  padding: 1em;
+  padding: 0.7em 1em;
   color: $darkGray;
   background-color: rgb(240, 240, 240);
   border: 1px solid #ddd;
   border-radius: 3px;
   overflow-x: auto;
-  margin: 10px 0 10px 0;
+  margin: 5px 0 5px 0;
 }
  
 code {
