--- a/css/post.scss
+++ b/css/post.scss
@@ -45,10 +45,6 @@
     border: 1px $darkerGray solid;
   }
 
-  table td {
-    overflow-wrap : break-word;
-  }
-
   table tr:nth-child(even){
     background-color: rgb(248, 248, 248)
   }
@@ -64,6 +60,9 @@
     padding: 2px 3px 2px 3px;
     border-radius: 3px;
   }
+
+  /* 本文オーバーフロー対策 */
+  overflow-wrap: break-word;
 }
 
 .post h2 {
