Add temporal meta tag for pocket

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
       });
     </script>
     -->
+
+    <meta name="pocket-site-verification" content="2641d15eba9695cc38071e3927cd6b" />
   </head>
 
   <body>
